TODO
* add tests
* update msvscpp files

20130404
* textual changes
* updated include header
* updated libfcache.3 man page

20130401
* 2013 update
* updated dependencies

20121211
* created stand-alone version based on libfguid
