@@ -1,6 +1,10 @@
 TODO
 * add tests
-* update msvscpp files
+
+20130406
+* code clean up
+* updated dependencies
+* updated msvscpp files
 
 20130404
 * textual changes
